--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,7 @@ mysql-connector-python==8.3.0
 schedule==1.2.1
 openai==1.14.2
 arxiv==2.1.0
-aiohttp==
-aiomysql==
-aiohttp-jinja2==
-jinja2==
-asyncio==
+aiohttp==3.9.3
+aiohttp-jinja2==1.6
+aiomysql==0.2.0
+asyncio==3.4.3
