database table merge 2

--- a/config.ini
+++ b/config.ini
@@ -5,7 +5,8 @@ password=19970308
 database=arxiv
 
 [settings]
-max_results = 500
+max_results=500
+arxiv_table=arxiv_articles
 
 [schedule]
 frequency_hours=2
