--- a/config.ini
+++ b/config.ini
@@ -5,8 +5,10 @@ password=19970308
 database=arxiv
 
 [settings]
-max_results=500
-arxiv_table=arxiv_articles
+max_results=1
+arxiv_table=arxiv_daily
+categories=cs.AI, cs.CR, cs.LG
+
 
 [schedule]
 frequency_hours=2
@@ -15,11 +17,9 @@ frequency_hours=2
 port=80
 
 [chatgpt]
-api_key=sk-xxxxxxxxxxxxxxxxxxxxxxxxxxx
+api_key=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
 
 [categories_and_tables]
 cs.AI=arxiv_cs_ai
 cs.CR=arxiv_cs_cr
 cs.LG=arxiv_cs_lg
-
-
