--- a/config.ini
+++ b/config.ini
@@ -17,9 +17,4 @@ frequency_hours=2
 port=80
 
 [chatgpt]
-api_key=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
-
-[categories_and_tables]
-cs.AI=arxiv_cs_ai
-cs.CR=arxiv_cs_cr
-cs.LG=arxiv_cs_lg
+api_key=sk-xxxxxx
