Add: total collected number articles

--- a/config.ini
+++ b/config.ini
@@ -5,7 +5,7 @@ password=19970308
 database=arxiv
 
 [settings]
-max_results=500
+max_results=3
 arxiv_table=arxiv_daily
 categories=cs.AI, cs.CR, cs.LG
 
@@ -17,4 +17,4 @@ frequency_hours=2
 port=80
 
 [chatgpt]
-api_key=sk-xxxxxx
+api_key=sk-xxxxxxxxxxxxxxx
