--- a/config_changethis.ini
+++ b/config_changethis.ini
@@ -1,11 +1,11 @@
 [database]
-host=localhost
-user=seanzou
-password=19970308
+host=<YOUR-DATABASE-HOST-HERE>
+user=<YOUR-DATABASE-USER-HERE>
+password=<YOUR-DATABASE-PASSWORD-HERE>
 database=arxiv
 
 [settings]
-max_results=3
+max_results=5
 arxiv_table=arxiv_daily
 categories=cs.AI, cs.CR, cs.LG
 
@@ -17,4 +17,4 @@ frequency_hours=2
 port=80
 
 [chatgpt]
-api_key=sk-xxxxxxxxxxxxxxx
+api_key=<YOUR-OPENAI-API-KEY-HERE>
